<resources>
    <string name="name_list">Playlist maker</string>
    <string name="search_name">Поиск</string>
    <string name="media_name">Медиатека</string>
    <string name="setting_name">Настройки</string>
    <string name="dark_name">Тёмная тема</string>
    <string name="share_name">Поделиться приложением</string>
    <string name="support_name">Написать в поддержку</string>
    <string name="agreement_name">Пользовательское соглашение</string>


    //-----Поделиться приложением------//
    <string name="share_ink">https://practicum.yandex.ru/android-developer/</string>
    //-----Написать в поддержку------//
    <string name="my_e_mail">alex321632163216@yandex.ru, alex32163216@mail.ru</string>
    <string name="massage_subject">«Сообщение разработчикам и разработчицам приложения Playlist Maker»</string>
    <string name="message_text">«Спасибо разработчикам и разработчицам за крутое приложение!»</string>
    //-----Пользовательское соглашение------//
    <string name="web_page_links">https://yandex.ru/legal/practicum_offer/</string>

</resources>