<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical">

    <TextView
        style="@style/PlaylistMaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/indent_left_edge"
        android:layout_marginTop="14dp"
        android:text=   "@string/name_list" />

    <Button
        android:id="@+id/search"
        style="@style/StyleButtons"
        android:layout_marginTop="40dp"
        android:text="@string/search_name"
        app:icon="@drawable/vector1" />

    <Button
        android:id="@+id/media"
        style="@style/StyleButtons"
        android:layout_marginTop="@dimen/distance_between_buttons"
        android:text="@string/media_name"
        app:icon="@drawable/vector2" />

    <Button
        android:id="@+id/setting"
        style="@style/StyleButtons"
        android:layout_marginTop="@dimen/distance_between_buttons"
        android:layout_marginBottom="28dp"
        android:text="@string/setting_name"
        app:icon="@drawable/vector3" />

</LinearLayout>